Bugfix: filter h3 margins on mobile now correct

--- a/scss/partials/_controlbar.scss
+++ b/scss/partials/_controlbar.scss
@@ -38,11 +38,13 @@
     width: 110px;
     @media (min-width: 768px) {
       width: 85vw;
+      h3 {
+        margin-right: auto;
+      }
     }
     h3 {
       letter-spacing: 1px;
       display: block;
-      margin-right: auto;
     }
     p {
       padding: 0 10px;
